# jira-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENHANCEMENTS.md  MANIFEST.in  OPEN_SOURCE_READY.md  PUBLISHING.md  PYPI_PUBLISHING.md  PYPI_READY.md  README.md  jira_client.py  pyproject.toml  requirements.txt  server.py  verify_open_source.sh
examples/: claude_desktop_config.json
jira_mcp/: __init__.py  __main__.py  config.py  jira_client.py  server.py
